# visualquakes

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  benchmarks.md
.github/workflows/: static.yml
python/: pyproject.toml
python/src/simplequakes/: __init__.py
python/src/visualquakes/: __init__.py
python/tests/: test_okada85.py
web/: app.js  benchmark.html  index.html  okada-shader.js  usgs.js
web/bench/: README.md  check-shader-algo.mjs  gen_reference.py  okada-bench.html  okada-shader.js  okada85.mjs  reference.json  test-usgs.mjs  validate.mjs
